--- a/src/client/src/styles/style.scss
+++ b/src/client/src/styles/style.scss
@@ -17,6 +17,7 @@ body {
     color: #646464;
     background-color: #fff;
     overflow-y: scroll;
+    font: inherit;
 }
 
 .text-danger {
